what the helly wrap around??? fix latoour

--- a/website/src/styles/Home.css
+++ b/website/src/styles/Home.css
@@ -78,6 +78,7 @@
   width:500px;
   height: 300px;
   margin: auto;
+  word-wrap: break-word;
 }
 @media only screen and (max-width: 650px) {
   .home {
